--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       name: '我的文档',
       logo: "./media/toux2.png",
       loadSidebar: "_sidebar.md",
-      coverpage: true,
+      coverpage: false,
       onlyCover: true,
       auto2top: true,
       maxLevel: 4,
