--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
         noData: '没有结果',
         paths: 'auto',
       },
+      cusdis: {
+        host: 'https://cusdis.com', // change the host if you are using self-hosted Cusdis
+        appId: '7778316f-62b6-4a30-80b7-e0686b00b5cc',
+      },
       count:{
         countable:true,
         position: 'bottom',
@@ -38,6 +42,8 @@
   </script>
   <!-- Docsify v4 -->
   <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
+  <script src="https://cusdis.com/js/cusdis.docsify.js"></script>
+  <script defer src="https://cusdis.com/js/widget/lang/zh-cn.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
   <script src="//unpkg.com/docsify-count/dist/countable.js"></script>
   
